--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "generate": "nuxi generate",
     "preview": "nuxi preview"
   },
+  "dependencies": {
+    "@nuxt/content": "^2.8.5",
+    "@nuxthq/studio": "^1.0.0",
+    "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "nuxt-icon": "^0.6.1"
+  },
   "devDependencies": {
-    "@nuxthq/studio": "^1.0.3",
-    "content-wind": "latest",
-    "nuxt": "latest"
+    "@nuxt/eslint-config": "^0.2.0",
+    "@types/node": "^20.8.3",
+    "eslint": "^8.52.0",
+    "nuxt": "^3.8.0",
+    "typescript": "^5.2.2"
   }
 }
