--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.8.5",
-    "@nuxthq/studio": "^1.0.0",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/tailwindcss": "^6.8.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "nuxt-icon": "^0.6.1"
+    "@nuxthq/studio": "^1.0.2"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.2.0",
-    "@types/node": "^20.8.3",
-    "eslint": "^8.52.0",
-    "nuxt": "^3.8.0",
-    "typescript": "^5.2.2"
+    "@antfu/eslint-config": "1.0.0-beta.27",
+    "@iconify-json/ph": "^1.1.6",
+    "@iconify-json/simple-icons": "^1.1.75",
+    "@nuxt/devtools": "latest",
+    "@nuxt/ui": "^2.9.0",
+    "@nuxt/ui-pro": "^0.3.1",
+    "eslint": "^8.51.0",
+    "nuxt": "^3.7.4",
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.3"
   }
 }
